--- a/config_data/usuario-service.yaml
+++ b/config_data/usuario-service.yaml
@@ -1,3 +1,8 @@
 server:
   port: 8081
   application-name: usuario-service
+eureka:
+  client:
+    fetch-registry:  true
+    register-whith-eureka:  true
+
