--- a/config_data/carro-service.yaml
+++ b/config_data/carro-service.yaml
@@ -1,4 +1,9 @@
 server:
   port: 8082
   application-name: carro-service
+eureka:
+  client:
+    fetch-registry:  true
+    register-whith-eureka:  true
+
 
