--- a/config_data/carro-service.yaml
+++ b/config_data/carro-service.yaml
@@ -3,7 +3,10 @@ server:
   application-name: carro-service
 eureka:
   client:
-    fetch-registry:  true
-    register-whith-eureka:  true
-
+    fetch-registry:  false
+    register-whith-eureka:  false
+    service-url:
+      default-zone:  http://localhost:8761/eureka
+    instance:
+      hostname:  localhost
 
