--- a/config_data/moto-service.yaml
+++ b/config_data/moto-service.yaml
@@ -5,3 +5,7 @@ eureka:
   client:
     fetch-registry:  true
     register-whith-eureka:  true
+    service-url:
+      default-zone:  http://localhost:8761/eureka
+    instance:
+      hostname:  localhost
