--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -1,31 +1,30 @@
 server:
   port: 8080
-  application-name: gateway-service
 eureka:
   client:
-    fetch-registry:  true
-    register-whith-eureka:  true
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
-      default-zone:  http://localhost:8761/eureka
+      default-zone: http://localhost:8761/eureka
     instance:
-       hostname: localhost
+      hostname: localhost
+
 spring:
   cloud:
     gateway:
       discovery:
         locator:
-          enable: true
+          enabled: true
       routes:
-      - id: usuario_service
-        uri: lb://usuario_service
-        predicates:
-          - Path=/usuario/**
-      - id: carro_service
-        uri: lb://carro_service
-        predicates:
-          - Path=/carro/**
-      - id: moto_service
-        uri: lb://moto_service
-        predicates:
-          - Path=/moto/**
-      
+        - id: usuario-service
+          uri: lb://usuario-service
+          predicates:
+            - Path=/usuario/**
+        - id: carro-service
+          uri: lb://carro-service
+          predicates:
+            - Path=/carro/**
+        - id: moto-service
+          uri: lb://moto-service
+          predicates:
+            - Path=/moto/**
