--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -20,6 +20,9 @@ spring:
           uri: lb://usuario-service
           predicates:
             - Path=/usuario/**
+          filters:
+          args:
+            methods: GET,POST
         - id: carro-service
           uri: lb://carro-service
           predicates:
