--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -17,7 +17,7 @@ spring:
           enabled: true
       routes:
         - id: usuario-service
-          uri: lb://usuario-service
+          uri: lb://usuario_service
           predicates:
             - Path=/usuario/**
           filters:
