--- a/config_data/usuario-service.yaml
+++ b/config_data/usuario-service.yaml
@@ -9,4 +9,6 @@ eureka:
       default-zone:  http://localhost:8761/eureka
     instance:
        instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+       statusPageUrl: http://${spring.application.name}:${spring.application.port}/usuario/
        statusPageUrlPath: /usuario/
+       
