--- a/config_data/eureka-service.yaml
+++ b/config_data/eureka-service.yaml
@@ -6,4 +6,6 @@ eureka:
     register-with-eureka:  false
     service-url:
       default-zone: http://${eureka.instance.hostname}:${server.port}/eureka/
-       statusPageUrl: http://${spring.application.name}:${spring.application.port}/
+  instance:
+    statusPageUrl: http://${spring.application.name}:${spring.application.port}/
+       
