--- a/config_data/usuario-service.yaml
+++ b/config_data/usuario-service.yaml
@@ -9,9 +9,8 @@ eureka:
       default-zone:  http://localhost:8761/eureka
     instance:
        instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka:
   instance:
-    statusPageUrl: https://${eureka.hostname}:${server.port}/usuario/
-    healthCheckUrl: https://${eureka.hostname}:${spring.application.port}/usuario/
-    homePageUrl: https://${eureka.hostname}:${spring.application.port}/
-
+    statusPageUrlPath: ${server.servletPath}/usuario/
+    healthCheckUrlPath: ${server.servletPath}/usuario
        
