--- a/config_data/usuario-service.yaml
+++ b/config_data/usuario-service.yaml
@@ -2,6 +2,9 @@ server:
   port: ${PORT:${SERVER_PORT:0}}
   application-name: usuario-service
 eureka:
+  instance:
+    status-page-url-path: ${server.servlet.path}/usuario/
+    status-page-url: ${server.servlet.path}/usuario/
   client:
     fetch-registry:  true
     register-whith-eureka:  true
