--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -17,7 +17,7 @@ spring:
           enabled: true
       routes:
         - id: usuario-service
-          uri: http://localhost:8082/
+          uri: lb://usuario-service
           predicates:
             - Path=/usuario/**
         - id: carro-service
