--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -21,6 +21,7 @@ spring:
           predicates:
             - Path=/usuario/**
         - id: carro-service
+          serviceId: carro-service
           uri: lb://carro-service
           predicates:
             - Path=/carro/**
