--- a/config_data/usuario-service.yaml
+++ b/config_data/usuario-service.yaml
@@ -1,13 +1,12 @@
 server:
-  port: 8084
-  application-name: usuario-service
+  port: ${PORT:${SERVER_PORT:0}}
 eureka:
   client:
-    fetch-registry:  true
-    register-whith-eureka:  true
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
-      default-zone:  http://localhost:8761/eureka
+      default-zone: http://localhost:8761/eureka
     instance:
-       instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}
-  
+      instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
        
