--- a/config_data/moto-service.yaml
+++ b/config_data/moto-service.yaml
@@ -1,11 +1,10 @@
 server:
   port: ${PORT:${SERVER_PORT:0}}
-  application-name: moto_service
 eureka:
   client:
-    fetch-registry:  true
-    register-whith-eureka:  true
+    fetch-registry: true
+    register-with-eureka: true
     service-url:
-      default-zone:  http://localhost:8761/eureka
+      default-zone: http://localhost:8761/eureka
     instance:
       instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
