--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -7,7 +7,9 @@ eureka:
     service-url:
       default-zone: http://localhost:8761/eureka
     instance:
-      hostname: localhost
+        instanceId: ${spring.application.name}
+        hostname: ${spring.application.name}
+        preferIpAddress: false
 
 spring:
   cloud:
