--- a/config_data/getway_service.yaml
+++ b/config_data/getway_service.yaml
@@ -8,9 +8,8 @@ eureka:
       default-zone: http://localhost:8761/eureka
     instance:
         instanceId: ${spring.application.name}
-        hostname: ${spring.application.name}
+        hostname: localhost
         preferIpAddress: false
-
 spring:
   cloud:
     gateway:
